Fix spacing for profile image and settings

--- a/src/app/profile/profile/profile.component.scss
+++ b/src/app/profile/profile/profile.component.scss
@@ -17,7 +17,7 @@ hr {
   padding: 0;
 }
 .profile {
-  column-gap: 35px;
+  gap: 35px;
 }
 .profile-form {
   display: flex;
